 * Construction Mode, Racer, HedgeEditor: No longer play Incoming voice for building stuff, fix other sound problems
 * Capture the Flag: Fix many bugs caused by playing with >2 teams
 * Capture the Flag: Properly place flag when first hog uses kamikaze or TimeBox
 * Capture the Flag: Fix flag not being dropped when carrier uses piano strike
 * CTF_Blizzard: Don't allow more than 2 clans. Excess hogs will be removed

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 + Mission 2, Mission 5: Reduce computer hog levels
 + Mission 6: Change mines
 + Mission 7: Add one additional pick hammer in a crate
 * Fix incorrect storytelling in mission descriptions
 * Missions now work even with corrupted team file, by using a default behaviour
 * Mission 1: Fix error message spam when Leaks a Lot drowns
 * Mission 3: Fix cannibals sometimes doing nothing for a full turn
 * Mission 6: Fix cyborgs sometimes doing nothing for a full turn
 * Mission 8: Fix invisible cyborg sometimes blocking the way
 * Mission 9: Fix cannibal talking to himself in cut scene if mission starts with 3 natives

Missions:
 + Target Practice: Re-center camera to hog when projectile is destroyed or drowns

Theme customization:
 + Add fallback music with new keys “fallback-music” and “fallback-sd-music”
 + Allow to hide themes explicitly with new key “hidden”. Using this key it's possible for hidden themes to have icons
 * Fix green color channel on themes with key “sd-tint”

Lua API:
 + New library: SimpleMission: Allows to create missions more easily
 + New call: WriteLnToChat(string): Add a line in the chat